* added option to lock the sequence
* added retaining of the queue through sessions
* fixed bug causing figures to "jump" when selected
* added more robust checking of legal figure letters
* fixed mobile layout issues (Issue #201)
* restored figure selection by moving through sequence string
* improved figure dragging to edges of sequence
* added default_view in all saves (also Form A, B, C)

2016.1.2
* fixed bug in figure scaling when using Reference sequence and Form A
* fixed bug causing negative zoom (e.g. -1%) to create extra figure and not change zoom

2016.1.1
* corrected prevention of pop-up blocker for Check Multiple Sequences
* fixed figure exit direction being different in Grid view when starting on Y axis on Form B
* changed handling of Floating Point to only deduct from figures without letter according 2016 CIVA rules
* fixed issue where non-allowed rolls (e.g. 43) would be added to roll total (rollSums)
* added "reference" directive for rule checking against fixed figures
* improved several aspects of reference sequence handling
* added 2016 IAC rules
* updated Form A, R & L penalty boxes as designed by CIVA

2016.1
* changed version number scheme to reflect active CIVA rules
* improved code; reduced variables in makeXXX sections
* corrected Tab field order in Sequence Info
* added drag & drop figure editing, including option to disable (Issue #132) 
* added CIVA rules for 2016
* updated infocheck directives for actype and acreg in several rule files
* corrected handling of direction in double bumps with different radii (Issue #198)
* added a warning for Issue #198 for pre-2016.1 sequences
* removed gap adjustment for rolls in the top from the figure editor
* changed 'Link' to 'Additional' for Free Unknowns according CIVA
* updated all 'link' and 'connectors' references in code to 'additional'
* added CIVA rules for 2016
* added "2015" Free rules to NZAC and CIVA
* added support for Programs consisting of multiple words (e.g. Free Known)