@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# OpenAero version 2016.1.3d
+# OpenAero version 2016.1.3
 addtohomescreen/addtohomescreen.css
 addtohomescreen/addtohomescreen.min.js
 arestisystem.html
@@ -116,7 +116,7 @@ rules/rules16-baea.js
 rules/rules15-france.js
 rules/rules15-ga.js
 rules/rules16-iac.js
-rules/rules15-vink.js
+rules/rules16-vink.js
 rules/rules16-glider-civa.js
 rules/rules15-nzac.js
 sprintf.min.js
