@@ -73,7 +73,7 @@
     <script src="rules/rules15-france.js" type="text/javascript"></script>
     <script src="rules/rules15-ga.js" type="text/javascript"></script>
     <script src="rules/rules16-iac.js" type="text/javascript"></script>
-    <script src="rules/rules15-vink.js" type="text/javascript"></script>
+    <script src="rules/rules16-vink.js" type="text/javascript"></script>
     <script src="rules/rules16-glider-civa.js" type="text/javascript"></script>
     <script src="rules/rules15-nzac.js" type="text/javascript"></script>
     <!-- example sequences -->
@@ -183,8 +183,10 @@
               <span class="userText" id="t_printMiniFormAonC"></span>
             </span>            
           </div>
+          <!-- removed in 2016.1.3 as forms are no longer "new"
           <div class="userText" id="t_newReplacementsABC"></div>
           <div class="twoLine">}</div>
+          -->
           <span id="formRL">
             <div>
               <input type="checkbox" id="printFormR">
