@@ -1,7 +1,7 @@
 {
   "name": "OpenAero",
   "description" : "Aerobatic sequence creation software",
-  "version": "2016.1.2",
+  "version": "2016.1.3",
   "manifest_version": 2,
   "minimum_chrome_version": "26",
 
